[gd_scene load_steps=6 format=3 uid="uid://dhvo41lv1t564"]

[ext_resource type="Script" path="res://combat/actionbar/ActionBar.gd" id="1_3xhrp"]

[sub_resource type="LabelSettings" id="LabelSettings_voo3d"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnv2w"]
bg_color = Color(0.843137, 0.611765, 0.329412, 0.466667)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.843137, 0.611765, 0.329412, 0.662745)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl5tu"]
bg_color = Color(0, 0.568627, 0.588235, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwx0n"]
bg_color = Color(0.843137, 0.611765, 0.329412, 0)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.992157, 0.784314, 0, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[node name="ActionBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3xhrp")

[node name="Markers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = -180.0
offset_right = 87.5
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChargeLabel" type="Label" parent="Markers"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "42
"
label_settings = SubResource("LabelSettings_voo3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bar" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.9
anchor_right = 0.7
anchor_bottom = 0.95
offset_top = -0.160034
grow_horizontal = 2
grow_vertical = 0

[node name="ChargeBar" type="ProgressBar" parent="Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_gnv2w")
theme_override_styles/fill = SubResource("StyleBoxFlat_vl5tu")
max_value = 1.0
show_percentage = false

[node name="AutoComboOutline" type="Panel" parent="Bar/ChargeBar"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lwx0n")

[node name="ActionQueue" type="Control" parent="Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
